[package]
name = "has160"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "=0.11.0-pre.8"
cfg-if = "1.0"

[dev-dependencies]
digest = { version = "=0.11.0-pre.8", features = ["dev"] }
hex-literal = "0.4"